<?xml version="1.0"?>
<package format="2">
  <name>lims2_vision</name>
  <version>0.0.1</version>
  <description>The lims2_vision package</description>

  <maintainer email="ks.choi@koreatech.ac.kr">Kang-Sun Choi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>roslib</depend>
  <depend>tensorflow_ros_cpp</depend>
  

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
