<?xml version="1.0"?>
<package format="2">
  <name>lims2_vision</name>
  <version>0.0.1</version>
  <description>The lims2_vision package</description>

  <maintainer email="ks.choi@koreatech.ac.kr">Kang-Sun Choi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>  
  <depend>tensorflow_ros_cpp</depend>
  
</package>
